--- a/index.html
+++ b/index.html
@@ -4,10 +4,68 @@
     <title></title>
     <link href='css/reset.css' rel='stylesheet' />
     <link href='css/design.css' rel='stylesheet' />
+    <link href='css/bootstrap/bootstrap.min.css' rel='stylesheet' />
+    <link href='css/bootstrap/bootstrap-responsive.min.css' rel='stylesheet' />
     <script data-main='js/main' src='js/libs/require/require.js'></script>
   </head>
   <body>
+    <div class='navbar'>
+      <div class='navbar-inner'>
+        <div class='container'>
+          <a class='brand' href='#'>
+            dom tree
+          </a>
+          <ul class='nav'>
+            <li class='active'>
+              <a href='#'>
+                Home
+              </a>
+            </li>
+            <li>
+              <a href='#'>
+                JavaScript
+              </a>
+            </li>
+            <li>
+              <a href='#'>
+                Customize
+              </a>
+            </li>
+            <li class='dropdown'>
+              <a class='dropdown-toggle' data-toggle='dropdown' href='#'>
+                Account
+                <b class='caret'></b>
+              </a>
+              <ul class='dropdown-menu'>
+                <li>
+                  <a class='settings'>
+                    Settings
+                  </a>
+                </li>
+                <li>
+                  <a class='balance'>
+                    Balance
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <form class='navbar-search pull-right'>
+            <input class='search-query' placeholder='Search' type='text' />
+          </form>
+        </div>
+      </div>
+    </div>
+    <div class='container-fluid'>
+      <div class='row-fluid'>
+        <div class='span2'>
+          SPAN 2
+        </div>
+        <div class='span10'></div>
+      </div>
+    </div>
     <script src='js/libs/jquery/jquery.js'></script>
+    <script src='js/bootstrap/bootstrap.min.js'></script>
     <script src='js/libs/underscore/underscore.js'></script>
     <script src='js/libs/backbone/backbone.js'></script>
   </body>
