--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <title></title>
-    <link href='css/reset.css' rel='stylesheet' />
     <link href='css/design.css' rel='stylesheet' />
     <link href='css/bootstrap/bootstrap.min.css' rel='stylesheet' />
     <link href='css/bootstrap/bootstrap-responsive.min.css' rel='stylesheet' />
@@ -59,9 +58,38 @@
     <div class='container-fluid'>
       <div class='row-fluid'>
         <div class='span2'>
-          SPAN 2
+          <p>
+            <a class='btn' data-toggle='modal' href='.myModal' role='button'>
+              Modal Demo
+            </a>
+          </p>
         </div>
-        <div class='span10'></div>
+        <div class='span10'>
+          SPAN 10
+        </div>
+      </div>
+    </div>
+    <div class='myModal modal hide fade'>
+      <div class='modal-header'>
+        <a aria-hidden='true' class='close' data-dismiss='modal' type='button'>
+          &times;
+        </a>
+        <h3>
+          Modal header
+        </h3>
+      </div>
+      <div class='modal-body'>
+        <p>
+          One fine body ...
+        </p>
+      </div>
+      <div class='modal-footer'>
+        <a aria-hidden='true' class='btn' data-dismiss='modal'>
+          Close
+        </a>
+        <a class='btn btn-primary'>
+          Save changes
+        </a>
       </div>
     </div>
     <script src='js/libs/jquery/jquery.js'></script>
