--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       <div class='navbar-inner'>
         <div class='container'>
           <a class='brand' href='#'>
-            dom tree
+            DOM tree
           </a>
           <ul class='nav'>
             <li class='active'>
               <a href='#'>
-                Home
+                Tree
               </a>
             </li>
             <li>
@@ -35,7 +35,7 @@
                 Account
                 <b class='caret'></b>
               </a>
-              <ul class='dropdown-menu'>
+              <ul aria-labelledby='dLabel' class='dropdown-menu' role='menu'>
                 <li>
                   <a class='settings'>
                     Settings
@@ -57,15 +57,67 @@
     </div>
     <div class='container-fluid'>
       <div class='row-fluid'>
-        <div class='span2'>
-          <p>
+        <div class='span2 bs-docs-sidebar'>
+          <ul class='nav nav-list bs-docs-sidenav affix hidden-phone' data-offset-top='0' data-spy='affix'>
+            <li class='active'>
+              <a href='#overview'>
+                Overview
+              </a>
+            </li>
+            <li>
+              <a href='#tree'>
+                Tree
+              </a>
+            </li>
+            <li>
+              <a href='#code'>
+                Code
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class='span10'>
+          <h2>
+            Get Resource
+          </h2>
+          <form class='form-horizontal'>
+            <div class='control-group'>
+              <label class='control-label' for='url'>
+                URL
+              </label>
+              <div class='controls'>
+                <input class='input-xlarge' id='url' placeholder='Paste URL ...' type='text' />
+                <span class='help-block'>
+                  to create DOM tree
+                </span>
+              </div>
+            </div>
+            <div class='control-group'>
+              <div class='controls'>
+                <button class='btn' type='submit'>
+                  Submit
+                </button>
+              </div>
+            </div>
+          </form>
+          <hr class='bs-docs-separator' />
+          <h2 id='tree'>
+            Tree
+          </h2>
+          <hr class='bs-docs-separator' />
+          <h2 id='code'>
+            Code
+          </h2>
+          <code>&lt;section&gt;</code>
+          <hr class='bs-docs-separator' />
+          <h2 id='modalDemo'>
+            Modal Demo
+          </h2>
+          <div class='modalDemo'>
             <a class='btn' data-toggle='modal' href='.myModal' role='button'>
               Modal Demo
             </a>
-          </p>
-        </div>
-        <div class='span10'>
-          SPAN 10
+          </div>
         </div>
       </div>
     </div>
