add sample visualization with d3.js

--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
           </ul>
         </div>
         <div class='span10'>
+          <svg>
+            <circle cx='100' cy='60' r='15'></circle>
+            <circle cx='250' cy='180' r='15'></circle>
+            <circle cx='500' cy='120' r='15'></circle>
+          </svg>
           <h2>
             Get Resource
           </h2>
@@ -148,5 +153,6 @@
     <script src='js/bootstrap/bootstrap.min.js'></script>
     <script src='js/libs/underscore/underscore.js'></script>
     <script src='js/libs/backbone/backbone.js'></script>
+    <script src='js/d3.v3/d3.v3.min.js'></script>
   </body>
 </html>
