--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </ul>
         </div>
         <div class='span10'>
-          <svg>
+          <svg height='250' width='600'>
             <circle cx='100' cy='60' r='12'></circle>
             <circle cx='250' cy='180' r='12'></circle>
             <circle cx='500' cy='120' r='12'></circle>
