--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
           </ul>
         </div>
         <div class='span10'>
-          <svg height='250' width='600'>
-            <circle cx='100' cy='60' r='12'></circle>
-            <circle cx='250' cy='180' r='12'></circle>
-            <circle cx='500' cy='120' r='12'></circle>
-            <circle cx='140' cy='80' r='12'></circle>
-            <circle cx='200' cy='150' r='12'></circle>
-            <circle cx='430' cy='160' r='12'></circle>
+          <svg>
+            <circle></circle>
+            <circle></circle>
+            <circle></circle>
+            <circle></circle>
+            <circle></circle>
+            <circle></circle>
           </svg>
           <h2>
             Get Resource
