add titles and re-organized html structure

--- a/index.html
+++ b/index.html
@@ -77,7 +77,16 @@
           </ul>
         </div>
         <div class='span10'>
-          <svg>
+          <h2 id='tree'>
+            SVG Circles
+          </h2>
+          <span class='help-block'>
+            transitions duration and direction are random
+          </span>
+          <button class='btn btn-info run'>
+            Run
+          </button>
+          <svg class='circles'>
             <circle></circle>
             <circle></circle>
             <circle></circle>
@@ -85,6 +94,7 @@
             <circle></circle>
             <circle></circle>
           </svg>
+          <hr class='bs-docs-separator' />
           <h2>
             Get Resource
           </h2>
@@ -112,6 +122,12 @@
           <h2 id='tree'>
             Tree
           </h2>
+          <svg class='branch'></svg>
+          <hr class='bs-docs-separator' />
+          <h2 id='tree'>
+            Bar Chart
+          </h2>
+          <svg class='barChart'></svg>
           <hr class='bs-docs-separator' />
           <h2 id='code'>
             Code
