add button run to display d3 objects

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <span class='help-block'>
             transitions duration and direction are random
           </span>
-          <button class='btn btn-info run'>
+          <button class='btn btn-success runCircles'>
             Run
           </button>
           <svg class='circles'>
@@ -127,6 +127,9 @@
           <h2 id='tree'>
             Bar Chart
           </h2>
+          <button class='btn btn-success runBarChart'>
+            Run
+          </button>
           <svg class='barChart'></svg>
           <hr class='bs-docs-separator' />
           <h2 id='code'>
