--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title></title>
+    <meta content='width=device-width, initial-scale=1.0' name='viewport' />
     <link href='css/design.css' rel='stylesheet' />
     <link href='css/bootstrap/bootstrap.min.css' rel='stylesheet' />
     <link href='css/bootstrap/bootstrap-responsive.min.css' rel='stylesheet' />
